# SQL-OpenEnv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: inference.py
env/: database.py  environment.py  models.py  reward.py
tasks/: __init__.py  task1_easy.py  task2_medium.py  task3_hard.py
